moved #141 to body and canvas

--- a/css/trains-2d.css
+++ b/css/trains-2d.css
@@ -1,9 +1,12 @@
+body{
+    background: #141;
+}
 #buffer,
 #buffer-static{
     display: none;
 }
 canvas{
-    background: #000;
+    background: #141;
     left: 0;
     position: absolute;
     top: 0;
